--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
       <!-- The slideshow/carousel -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/Carrusel/tienda1.jpeg" alt="Los Angeles" class="d-block w-100 ">
+          <img src=".../img/Carrusel/tienda1.jpeg" alt="Los Angeles" class="d-block w-100 ">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../img/Carrusel/tienda2.jpg" alt="Chicago" class="d-block w-100">
+          <img src=".../img/Carrusel/tienda2.jpg" alt="Chicago" class="d-block w-100">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../img/Carrusel/tienda3.jpg" alt="New York" class="d-block w-100">
+          <img src=".../img/Carrusel/tienda3.jpg" alt="New York" class="d-block w-100">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
