--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
       <div class="row photos" data-bss-baguettebox>
         <div class="col-sm-6 col-md-4 col-lg-3 item">
           <br>
-          <a href="desk.jpg"><img class="img-fluid" id="imgborder" src="../img/Productos/polo deportivo-hombre-2.jpeg" /></a>
+          <a href="desk.jpg"><img class="img-fluid" id="imgborder" src=".../img/Productos/polo deportivo-hombre-2.jpeg" /></a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-              <button class="default-btn uppercase" href="Productos.html"  onclick="location.href = '../html/view16.html'">Ver mas</button>
+              <button class="default-btn uppercase" href="Productos.html"  onclick="location.href = '.../html/view16.html'">Ver mas</button>
             </center>
             <br>
           </div>
@@ -137,13 +137,13 @@
 
         <div class="col-sm-6 col-md-4 col-lg-3 item">
           <br>
-          <a href="building.jpg"><img class="img-fluid" id="imgborder" src="../img/Productos/casaca y polo.jpeg" />
+          <a href="building.jpg"><img class="img-fluid" id="imgborder" src=".../img/Productos/casaca y polo.jpeg" />
           </a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase"  onclick="location.href = '../html/view14.html'" >Ver mas</button>
+            <button class="default-btn uppercase"  onclick="location.href = '.../html/view14.html'" >Ver mas</button>
           </center>
             <br>
           </div>
