--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       style="height: 80px; background-color: #676d79">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="../img/logo.png" alt="" class="" height="60" />
+          <img src="/Protoripo_practica/img/logo.png" alt="" class="" height="60" />
         </a>
         <button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler">
           <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
@@ -84,19 +84,19 @@
       <!-- The slideshow/carousel -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src=".../img/Carrusel/tienda1.jpeg" alt="Los Angeles" class="d-block w-100 ">
+          <img src="/Protoripo_practica/img/Carrusel/tienda1.jpeg" alt="Los Angeles" class="d-block w-100 ">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
         </div>
         <div class="carousel-item">
-          <img src=".../img/Carrusel/tienda2.jpg" alt="Chicago" class="d-block w-100">
+          <img src="/Protoripo_practica/img/Carrusel/tienda2.jpg" alt="Chicago" class="d-block w-100">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
         </div>
         <div class="carousel-item">
-          <img src=".../img/Carrusel/tienda3.jpg" alt="New York" class="d-block w-100">
+          <img src="/Protoripo_practica/img/Carrusel/tienda3.jpg" alt="New York" class="d-block w-100">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
@@ -124,7 +124,7 @@
       <div class="row photos" data-bss-baguettebox>
         <div class="col-sm-6 col-md-4 col-lg-3 item">
           <br>
-          <a href="desk.jpg"><img class="img-fluid" id="imgborder" src=".../img/Productos/polo deportivo-hombre-2.jpeg" /></a>
+          <a href="desk.jpg"><img class="img-fluid" id="imgborder" src="/Protoripo_practica/img/Productos/polo deportivo-hombre-1.jpeg" /></a>
 
           <div class="d-grid gap-2 ">
             <br>
@@ -137,7 +137,7 @@
 
         <div class="col-sm-6 col-md-4 col-lg-3 item">
           <br>
-          <a href="building.jpg"><img class="img-fluid" id="imgborder" src=".../img/Productos/casaca y polo.jpeg" />
+          <a href="building.jpg"><img class="img-fluid" id="imgborder" src="/Protoripo_practica/img/Productos/casaca y polo.jpeg" />
           </a>
 
           <div class="d-grid gap-2 ">
@@ -151,7 +151,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 item">
           <br>
-          <a href="loft.jpg"><img class="img-fluid" id="imgborder" src="../img/Productos/camisa-hombre-1.jpeg" /></a>
+          <a href="loft.jpg"><img class="img-fluid" id="imgborder" src="/Protoripo_practica/img/Productos/camisa-hombre-1.jpeg" /></a>
           <div class="d-grid gap-2 ">
             <br>
             <center>
@@ -162,7 +162,7 @@
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 item"><br>
-          <a href="building.jpg"><img class="img-fluid" id="imgborder" src="../img/Productos/polo deportivo-hombre-1.jpeg" /></a>
+          <a href="building.jpg"><img class="img-fluid" id="imgborder" src="/Protoripo_practica/img/Productos/polo deportivo-hombre-2.jpeg" /></a>
           <div class="d-grid gap-2 ">
             <br>
             <center>
@@ -193,7 +193,7 @@
       <div class="intro">
       </div>
       <div class="row photos" data-bss-baguettebox
-        style="background-image: url(../img/amigas.jpg);background-repeat: no-repeat;background-size:100%;border-radius: 20px;">
+        style="background-image: url(/Protoripo_practica/img/amigas.jpg);background-repeat: no-repeat;background-size:100%;border-radius: 20px;">
 
         <div class="col-sm-6 col-md-4 col-lg-3 item" style="position: relative;
                 left: 40%;">
@@ -201,7 +201,7 @@
 
           <div>
            
-              <img class="img-fluid" id="imgborder" src="../img/Productos/WhatsApp Image 2021-12-12 at 1.54.22 PM (2).jpeg" />
+              <img class="img-fluid" id="imgborder" src="/Protoripo_practica/img/Productos/WhatsApp Image 2021-12-12 at 1.54.22 PM (2).jpeg" />
               <br>
               <div class="d-grid gap-2">
                 <br>
@@ -220,7 +220,7 @@
           <a href="building.jpg">
             <div>
               <img class="img-fluid" id="imgborder"
-                src="../img/Productos/WhatsApp Image 2021-12-12 at 1.54.24 PM (2).jpeg" id="zoom" />
+                src="/Protoripo_practica/img/Productos/WhatsApp Image 2021-12-12 at 1.54.24 PM (2).jpeg" id="zoom" />
           </a>
           <div class="d-grid gap-2 ">
             <br>
@@ -253,11 +253,11 @@
 
       </div>
       <div class="row photos" data-bss-baguettebox
-        style="background-image: url(../img/fondo-hombre.png);background-repeat: no-repeat;background-size:100%; border-radius: 20px;">
+        style="background-image: url(/Protoripo_practica/img/fondo-hombre.png);background-repeat: no-repeat;background-size:100%; border-radius: 20px;">
         <div class="col-sm-6 col-md-4 col-lg-3 item" style="position: relative;
                 left: 40%;">
           <br>
-          <a href="desk.jpg"><img class="img-fluid" id="imgborder" src="../img/Productos/camisa-hombre-2.jpeg"
+          <a href="desk.jpg"><img class="img-fluid" id="imgborder" src="/Protoripo_practica/img/Productos/camisa-hombre-2.jpeg"
               id="zoom" /></a>
           <div class="d-grid gap-2 ">
             <br>
@@ -273,7 +273,7 @@
           <div class="row">
           </div>
           <a href="building.jpg">
-            <img class="img-fluid" id="imgborder" src="../img/Productos/polo sin cuello.jpeg" id="zoom" /></a>
+            <img class="img-fluid" id="imgborder" src="/Protoripo_practica/img/Productos/polo sin cuello.jpeg" id="zoom" /></a>
 
 
           <div class="d-grid gap-2 ">
@@ -313,9 +313,9 @@
 
       <div class="col-md-4 col-xs-12 metodos text-center">
         <h6> MÉTODOS DE PAGO </h6>
-        <img src="../img/visa-logo.png">
-        <img src="../img/yape.png" style="width: 80px; height: 100px;">
-        <img src="../img/pngaaa.com-197520.png">
+        <img src="/Protoripo_practica/img/visa-logo.png">
+        <img src="/Protoripo_practica/img/yape.png" style="width: 80px; height: 100px;">
+        <img src="/Protoripo_practica/img/pngaaa.com-197520.png">
       </div>
 
       <div class="col-md-4 col-xs-12 sociales">
