--- a/Protoripo_practica/html/nosotros.html
+++ b/Protoripo_practica/html/nosotros.html
@@ -74,7 +74,7 @@
   </div>
   <div style="justify-content:center">
     <label class="label" style="   height: 20px;
-    color:#2D527C;
+    color:#2d527c;
     display:flex;
     justify-content: center;
     align-items: center;">Lider en confeciones en el norte del peru</label>
