--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="img/png" sizes="32x32" href="../img/icon.png">
+  <link rel="icon" type="img/png" sizes="32x32" href="/Protoripo_practica/img/icon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="/Protoripo_practica/css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/1e980a40a7.js" crossorigin="anonymous"></script>
 
@@ -17,7 +17,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script type="text/javascript" src="../js/main.js"></script>
+  <script type="text/javascript" src="/Protoripo_practica/js/main.js"></script>
   <title>Ragil Ghoper</title>
 </head>
 
@@ -129,7 +129,7 @@
           <div class="d-grid gap-2 ">
             <br>
             <center>
-              <button class="default-btn uppercase" href="Productos.html"  onclick="location.href = '.../html/view16.html'">Ver mas</button>
+              <button class="default-btn uppercase" href="Productos.html"  onclick="location.href = '/Protoripo_practica/html/view16.html'">Ver mas</button>
             </center>
             <br>
           </div>
@@ -143,7 +143,7 @@
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase"  onclick="location.href = '.../html/view14.html'" >Ver mas</button>
+            <button class="default-btn uppercase"  onclick="location.href = '/Protoripo_practica/html/view14.html'" >Ver mas</button>
           </center>
             <br>
           </div>
@@ -156,7 +156,7 @@
             <br>
             <center>
             <div id="cwnter"></div>
-            <button class="default-btn uppercase"  href="Productos.html"  onclick="location.href = '../html/view17.html'">Ver mas</button>
+            <button class="default-btn uppercase"  href="Productos.html"  onclick="location.href = '/Protoripo_practica/html/view17.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -166,7 +166,7 @@
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase"  href="Productos.html"  onclick="location.href = '../html/view18.html'">Ver mas</button>
+            <button class="default-btn uppercase"  href="Productos.html"  onclick="location.href = '/Protoripo_practica/html/view18.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -206,7 +206,7 @@
               <div class="d-grid gap-2">
                 <br>
                 <center>
-                  <button class="default-btn uppercase"  onclick="location.href = '../html/view19.html'">Ver mas</button>
+                  <button class="default-btn uppercase"  onclick="location.href = '/Protoripo_practica/html/view19.html'">Ver mas</button>
               </center>
                 <br>
               </div>
@@ -225,7 +225,7 @@
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase"  onclick="location.href = '../html/view20.html'">Ver mas</button>
+            <button class="default-btn uppercase"  onclick="location.href = '/Protoripo_practica/html/view20.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -262,7 +262,7 @@
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view21.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view21.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -279,7 +279,7 @@
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view9.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view9.html'">Ver mas</button>
           </center>
             <br>
           </div>
