--- a/Protoripo_practica/html/Productos.html
+++ b/Protoripo_practica/html/Productos.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="img/png" sizes="32x32" href="../img/icon.png">
+  <link rel="icon" type="img/png" sizes="32x32" href="/Protoripo_practica/img/icon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <link rel="stylesheet" href="../css/styles.css">
+  <link rel="stylesheet" href="/Protoripo_practica/css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/1e980a40a7.js" crossorigin="anonymous"></script>
 
@@ -17,8 +17,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script type="text/javascript" src="../js/main.js"></script>
-  <script type="text/javascript" src="../js/redirecion.js"></script>
+  <script type="text/javascript" src="/Protoripo_practica/js/main.js"></script>
+  <script type="text/javascript" src="/Protoripo_practica/js/redirecion.js"></script>
   <title>Ragil Ghoper</title>
 </head>
 
@@ -28,7 +28,7 @@
   style="height: 80px; background-color: #676d79">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
-      <img src="../img/logo.png" alt="" class="" height="60" />
+      <img src="/Protoripo_practica/img/logo.png" alt="" class="" height="60" />
     </a>
     <button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler">
       <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
@@ -68,19 +68,19 @@
     <!-- The slideshow/carousel -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="../img/Carrusel/productos1.jpg" alt="Los Angeles" class="d-block w-100 ">
+        <img src="/Protoripo_practica/img/Carrusel/productos1.jpg" alt="Los Angeles" class="d-block w-100 ">
         <div class="carousel-caption d-none d-md-block">
 
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../img/Carrusel/tienda2.jpg" alt="Chicago" class="d-block w-100">
+        <img src="/Protoripo_practica/img/Carrusel/tienda2.jpg" alt="Chicago" class="d-block w-100">
         <div class="carousel-caption d-none d-md-block">
 
         </div>
       </div>
       <div class="carousel-item">
-        <img src="../img/Carrusel/tienda3.jpg" alt="New York" class="d-block w-100">
+        <img src="/Protoripo_practica/img/Carrusel/tienda3.jpg" alt="New York" class="d-block w-100">
         <div class="carousel-caption d-none d-md-block">
 
         </div>
@@ -112,12 +112,12 @@
           </div>
 
 
-          <a href="view.html"><img class="img-fluid" src="../img/Productos/chaleco de  construccion.jpeg"  /></a>
+          <a href="view.html"><img class="img-fluid" src="/Protoripo_practica/img/Productos/chaleco de  construccion.jpeg"  /></a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase " onclick="location.href = '../html/view.html'">Ver mas</button>
+            <button class="default-btn uppercase " onclick="location.href = '/Protoripo_practica/html/view.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -129,12 +129,12 @@
           <div class="row">
 
           </div>
-          <a href="building.jpg"><img class="img-fluid" src="../img/Productos/uniforme de policia.jpeg" /></a>
+          <a href="building.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/uniforme de policia.jpeg" /></a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-              <button class="default-btn uppercase " onclick="location.href = '../html/view2.html'">Ver mas</button>
+              <button class="default-btn uppercase " onclick="location.href = '/Protoripo_practica/html/view2.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -145,11 +145,11 @@
           <p class="text-center fw-bold fs-5">Camisa de Enfermera</p>
           <div class="row">
           </div>
-          <a href="loft.jpg"><img class="img-fluid" src="../img/Productos/Uniforme de essalud.jpeg" /></a>
+          <a href="loft.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/Uniforme de essalud.jpeg" /></a>
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view3.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view3.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -158,11 +158,11 @@
           <p class="text-center fw-bold fs-5">Camisa PetroPeru</p>
           <div class="row">
           </div>
-          <a href="building.jpg"><img class="img-fluid" src="../img/Productos/uniforme petro-peru.jpeg" /></a>
+          <a href="building.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/uniforme petro-peru.jpeg" /></a>
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase"onclick="location.href = '../html/view4.html'">Ver mas</button>
+            <button class="default-btn uppercase"onclick="location.href = '/Protoripo_practica/html/view4.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -194,12 +194,12 @@
           </div>
 
 
-          <a href="desk.jpg"><img class="img-fluid" src="../img/Productos/gorra-homre 1.jpeg" /></a>
+          <a href="desk.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/gorra-homre 1.jpeg" /></a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view5.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view5.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -210,12 +210,12 @@
           <p class="text-center fw-bold fs-5">Gorra</p>
           <div class="row">
           </div>
-          <a href="building.jpg"><img class="img-fluid" src="../img/Productos/gorre-mujer-1.jpeg" /></a>
+          <a href="building.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/gorre-mujer-1.jpeg" /></a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view6.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view6.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -226,11 +226,11 @@
           <p class="text-center fw-bold fs-5">Gorra</p>
           <div class="row">
           </div>
-          <a href="loft.jpg"><img class="img-fluid" src="../img/Productos/gorra-mujer-2.jpeg" /></a>
+          <a href="loft.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/gorra-mujer-2.jpeg" /></a>
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view7.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view7.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -240,12 +240,12 @@
           <p class="text-center fw-bold fs-5">Gorra</p>
           <div class="row">
           </div>
-          <a href="building.jpg"><img class="img-fluid" src="../img/Productos/gorra de policia.jpeg" /></a>
+          <a href="building.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/gorra de policia.jpeg" /></a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view8.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view8.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -276,12 +276,12 @@
           </div>
 
 
-          <a href="desk.jpg"><img class="img-fluid" src="../img/Productos/polo sin cuello.jpeg" /></a>
+          <a href="desk.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/polo sin cuello.jpeg" /></a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase"  onclick="location.href = '../html/view9.html'">Ver mas</button>
+            <button class="default-btn uppercase"  onclick="location.href = '/Protoripo_practica/html/view9.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -293,12 +293,12 @@
           <div class="row">
 
           </div>
-          <a href="building.jpg"><img class="img-fluid" src="../img/Productos/polo casual.jpeg" /></a>
+          <a href="building.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/polo casual.jpeg" /></a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view10.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view10.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -309,11 +309,11 @@
           <p class="text-center fw-bold fs-5">Polo</p>
           <div class="row">
           </div>
-          <a href="loft.jpg"><img class="img-fluid" src="../img/Productos/WhatsApp Image 2021-12-12 at 1.54.25 PM (1).jpeg" /></a>
+          <a href="loft.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/WhatsApp Image 2021-12-12 at 1.54.25 PM (1).jpeg" /></a>
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view11.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view11.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -322,11 +322,11 @@
           <p class="text-center fw-bold fs-5" >Polo</p>
           <div class="row">
           </div>
-          <a href="building.jpg"><img class="img-fluid" src="../img/Productos/WhatsApp Image 2021-12-12 at 1.54.24 PM (3).jpeg" /></a>
+          <a href="building.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/WhatsApp Image 2021-12-12 at 1.54.24 PM (3).jpeg" /></a>
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view12.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view12.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -357,12 +357,12 @@
           </div>
 
 
-          <a href="desk.jpg"><img class="img-fluid" src="../img/Productos/chaleco de  construccion.jpeg" /></a>
+          <a href="desk.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/chaleco de  construccion.jpeg" /></a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-              <button class="default-btn uppercase " onclick="location.href = '../html/view.html'">Ver mas</button>
+              <button class="default-btn uppercase " onclick="location.href = '/Protoripo_practica/html/view.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -374,12 +374,12 @@
           <div class="row">
 
           </div>
-          <a href="building.jpg"><img class="img-fluid" src="../img/Productos/chaleco-hombre.jpeg" /></a>
+          <a href="building.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/chaleco-hombre.jpeg" /></a>
 
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view13.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view13.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -390,11 +390,11 @@
           <p class="text-center fw-bold fs-5">Casaca</p>
           <div class="row">
           </div>
-          <a href="loft.jpg"><img class="img-fluid" src="../img/Productos/casaca y polo.jpeg" /></a>
+          <a href="loft.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/casaca y polo.jpeg" /></a>
           <div class="d-grid gap-2 ">
             <br>
             <center>
-            <button class="default-btn uppercase" onclick="location.href = '../html/view14.html'">Ver mas</button>
+            <button class="default-btn uppercase" onclick="location.href = '/Protoripo_practica/html/view14.html'">Ver mas</button>
           </center>
             <br>
           </div>
@@ -403,7 +403,7 @@
           <p class="text-center fw-bold fs-5">Casaca</p>
           <div class="row">
           </div>
-          <a href="building.jpg"><img class="img-fluid" src="../img/Productos/polera-hombre.jpeg" /></a>
+          <a href="building.jpg"><img class="img-fluid" src="/Protoripo_practica/img/Productos/polera-hombre.jpeg" /></a>
           <div class="d-grid gap-2 ">
             <br>
             <center>
@@ -450,9 +450,9 @@
 
     <div class="col-md-4 col-xs-12 metodos text-center">
       <h6> MÉTODOS DE PAGO </h6>
-      <img src="../img/visa-logo.png">
-      <img src="../img/yape.png" style="width: 80px; height: 100px;">
-      <img src="../img/pngaaa.com-197520.png">
+      <img src="/Protoripo_practica/img/visa-logo.png">
+      <img src="/Protoripo_practica/img/yape.png" style="width: 80px; height: 100px;">
+      <img src="/Protoripo_practica/img/pngaaa.com-197520.png">
     </div>
 
     <div class="col-md-4 col-xs-12 sociales">
