--- a/Protoripo_practica/html/Servicios.html
+++ b/Protoripo_practica/html/Servicios.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="img/png" sizes="32x32" href="../img/icon.png">
+    <link rel="icon" type="img/png" sizes="32x32" href="/Protoripo_practica/img/icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/Protoripo_practica/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1e980a40a7.js" crossorigin="anonymous"></script>
   
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../js/main.js"></script>
+    <script type="text/javascript" src="/Protoripo_practica/js/main.js"></script>
     <title>Ragil Ghoper</title>
   </head>
 <body>
@@ -25,7 +25,7 @@
   style="height: 80px; background-color: #676d79">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
-      <img src="../img/logo.png" alt="" class="" height="60" />
+      <img src="/Protoripo_practica/img/logo.png" alt="" class="" height="60" />
     </a>
     <button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler">
       <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
 </nav>
 
   <section style="position: relative">
-    <img width="100%" height="548px" src="../img/servicio1.png" />
+    <img width="100%" height="548px" src="/Protoripo_practica/img/servicio1.png" />
   </section>
   <div class="container">
     <div class="row">
@@ -74,7 +74,7 @@
         <div class="col-lg-4">
           <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
             <div class="d-flex features-icons-icon">
-              <img src="../img/bordado.jpg" alt="" class="rounded mx-auto d-block" height="250px" width="250px">
+              <img src="/Protoripo_practica/img/bordado.jpg" alt="" class="rounded mx-auto d-block" height="250px" width="250px">
             </div>
             <h3>Bordado</h3>
           </div>
@@ -82,7 +82,7 @@
         <div class="col-lg-4">
           <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
             <div class="d-flex features-icons-icon">
-              <img src="../img/sublimado.jpg" alt="" class="rounded mx-auto d-block" height="250px" width="250px">
+              <img src="/Protoripo_practica/img/sublimado.jpg" alt="" class="rounded mx-auto d-block" height="250px" width="250px">
             </div>
             <h3>Sublimado </h3>
           </div>
@@ -90,7 +90,7 @@
         <div class="col-lg-4">
           <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
             <div class="d-flex features-icons-icon">
-              <img src="../img/estampado.jpg" alt="" class="rounded mx-auto d-block" height="250px" width="250px">
+              <img src="/Protoripo_practica/img/estampado.jpg" alt="" class="rounded mx-auto d-block" height="250px" width="250px">
             </div>
             <h3>Estampado</h3>
 
@@ -114,7 +114,7 @@
         <div class="col-lg-4">
           <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
             <div class="d-flex features-icons-icon">
-              <img src="../img/delivery.png" alt="" class="rounded mx-auto d-block" height="128px" width="128px">
+              <img src="/Protoripo_practica/img/delivery.png" alt="" class="rounded mx-auto d-block" height="128px" width="128px">
             </div>
             <h3>Envios a domicilio</h3>
           </div>
@@ -122,7 +122,7 @@
         <div class="col-lg-4">
           <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
             <div class="d-flex features-icons-icon">
-              <img src="../img/cambio.png" alt="" class="rounded mx-auto d-block" height="128px" width="128px">
+              <img src="/Protoripo_practica/img/cambio.png" alt="" class="rounded mx-auto d-block" height="128px" width="128px">
             </div>
             <h3>Cambios y devoluciones </h3>
           </div>
@@ -130,7 +130,7 @@
         <div class="col-lg-4">
           <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
             <div class="d-flex features-icons-icon">
-              <img src="../img/domicilio.png" alt="" class="rounded mx-auto d-block" height="128px" width="128px">
+              <img src="/Protoripo_practica/img/domicilio.png" alt="" class="rounded mx-auto d-block" height="128px" width="128px">
             </div>
             <h3>Recoger en local</h3>
 
@@ -154,9 +154,9 @@
 
     <div class="col-md-4 col-xs-12 metodos text-center">
       <h6> MÉTODOS DE PAGO </h6>
-      <img src="../img/visa-logo.png">
-      <img src="../img/yape.png" style="width: 80px; height: 100px;">
-      <img src="../img/pngaaa.com-197520.png">
+      <img src="/Protoripo_practica/img/visa-logo.png">
+      <img src="/Protoripo_practica/img/yape.png" style="width: 80px; height: 100px;">
+      <img src="/Protoripo_practica/img/pngaaa.com-197520.png">
     </div>
 
     <div class="col-md-4 col-xs-12 sociales">
