--- a/Protoripo_practica/html/nosotros.html
+++ b/Protoripo_practica/html/nosotros.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="img/png" sizes="32x32" href="../img/icon.png">
+    <link rel="icon" type="img/png" sizes="32x32" href="/Protoripo_practica/img/icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="/Protoripo_practica/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1e980a40a7.js" crossorigin="anonymous"></script>
   
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../js/main.js"></script>
+    <script type="text/javascript" src="/Protoripo_practica/js/main.js"></script>
     <title>Ragil Ghoper</title>
   </head>
 
@@ -39,7 +39,7 @@
   style="height: 80px; background-color: #676d79">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
-      <img src="../img/logo.png" alt="" class="" height="60" />
+      <img src="/Protoripo_practica/img/logo.png" alt="" class="" height="60" />
     </a>
     <button data-bs-toggle="collapse" data-bs-target="#navcol-1" class="navbar-toggler">
       <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
   </div>
 </nav>
   <div style="justify-content:center">
-    <img src="../img/logo.png" lass="rounded mx-auto d-block" alt="Responsive image" style="margin: 10px auto 10px;
+    <img src="/Protoripo_practica/img/logo.png" lass="rounded mx-auto d-block" alt="Responsive image" style="margin: 10px auto 10px;
     display: block;">
 
   </div>
@@ -83,7 +83,7 @@
     <div class="container-fluid p-0">
       <div class="row g-0 ">
         <div class="col-lg-6 text-white order-lg-2 showcase-img">
-          <img src="../img/historia.png" lass="rounded mx-auto d-block" alt="Responsive image" style="margin: 10px auto 10px;
+          <img src="/Protoripo_practica/img/historia.png" lass="rounded mx-auto d-block" alt="Responsive image" style="margin: 10px auto 10px;
           display: block;">
         </div>
         <div class="col-lg-6 my-auto order-lg-1 showcase-text shadow-sm p-3 mb-5 bg-white rounded">
@@ -105,7 +105,7 @@
       </div>
       <div class="row g-0 ">
         <div class="col-lg-6 text-white showcase-img">
-          <img src="../img/confecciones-de-moda-linea-del-tiempo-audaces.png" class="rounded mx-auto d-block"
+          <img src="/Protoripo_practica/img/confecciones-de-moda-linea-del-tiempo-audaces.png" class="rounded mx-auto d-block"
             alt="Responsive image" style="margin: 10px auto 10px;
           display: block;" alt="Responsive image">
         </div>
@@ -120,7 +120,7 @@
       </div>
       <div class="row g-0 ">
         <div class="col-lg-6 text-white order-lg-2 showcase-img">
-          <img src="../img/vision.jpg" class="rounded mx-auto d-block" alt="Responsive image" style="margin: 10px auto 10px;
+          <img src="/Protoripo_practica/img/vision.jpg" class="rounded mx-auto d-block" alt="Responsive image" style="margin: 10px auto 10px;
           display: block;" alt="Responsive image">
         </div>
         <div class="col-lg-6 my-auto order-lg-1 showcase-text shadow-sm p-3 mb-5 bg-white rounded">
@@ -141,7 +141,7 @@
         <div class="col-lg-4">
           <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
             <div class="d-flex features-icons-icon">
-              <img src="../img/delivery.png" alt="" class="rounded mx-auto d-block" height="180px" width="180px">
+              <img src="/Protoripo_practica/img/delivery.png" alt="" class="rounded mx-auto d-block" height="180px" width="180px">
             </div>
             <h3>Envios a domicilio</h3>
           </div>
@@ -149,7 +149,7 @@
         <div class="col-lg-4">
           <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
             <div class="d-flex features-icons-icon">
-              <img src="../img/cambio.png" alt="" class="rounded mx-auto d-block" height="180px" width="180px">
+              <img src="/Protoripo_practica/img/cambio.png" alt="" class="rounded mx-auto d-block" height="180px" width="180px">
             </div>
             <h3>Cambios y devoluciones </h3>
           </div>
@@ -157,7 +157,7 @@
         <div class="col-lg-4">
           <div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
             <div class="d-flex features-icons-icon">
-              <img src="../img/domicilio.png" alt="" class="rounded mx-auto d-block" height="180px" width="180px">
+              <img src="/Protoripo_practica/img/domicilio.png" alt="" class="rounded mx-auto d-block" height="180px" width="180px">
             </div>
             <h3>Recoger en local</h3>
 
@@ -181,9 +181,9 @@
 
       <div class="col-md-4 col-xs-12 metodos text-center">
         <h6> MÉTODOS DE PAGO </h6>
-        <img src="../img/visa-logo.png">
-        <img src="../img/yape.png" style="width: 80px; height: 100px;">
-        <img src="../img/pngaaa.com-197520.png">
+        <img src="/Protoripo_practica/img/visa-logo.png">
+        <img src="/Protoripo_practica/img/yape.png" style="width: 80px; height: 100px;">
+        <img src="/Protoripo_practica/img/pngaaa.com-197520.png">
       </div>
 
       <div class="col-md-4 col-xs-12 sociales">
