--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <li class="nav-item">
               <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px"
-                href="/Protoripo_practica/html/index.html" id="cabecera">Inicio</a>
+                href="/index.html" id="cabecera">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px"
