--- a/Protoripo_practica/html/error.html
+++ b/Protoripo_practica/html/error.html
@@ -37,7 +37,7 @@
                         <div class="containt_box_404">
                             <h3 class="h1" style="color:white">Reviso su conexion de internet</h3>
                             <p style="color:white">La pagina no esta disponible en el navegadora proceda a refrescar la pagina</p>
-                            <a class="link_404" style="font-weight: bolder;" href="../html/index.html">Regresar a la pagina principal</a>
+                            <a class="link_404" style="font-weight: bolder;" href="/index.html">Regresar a la pagina principal</a>
                         </div>
                     </div>
                 </div>
