--- a/Protoripo_practica/html/nosotros.html
+++ b/Protoripo_practica/html/nosotros.html
@@ -48,20 +48,20 @@
       <ul class="nav navbar-nav navbar-center">
 
         <li class="nav-item">
-          <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="index.html"
+          <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="/index.html"
             id="cabecera">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="Nosotros.html"
+          <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="/Protoripo_practica/html/nosotros.html"
             id="cabecera">Nosotros</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px"
-            href="Productos.html" id="cabecera">Productos</a>
+            href="/Protoripo_practica/html/Productos.html" id="cabecera">Productos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px"
-            href="Servicios.html" id="cabecera">Servicios</a>
+            href="/Protoripo_practica/html/Servicios.html" id="cabecera">Servicios</a>
         </li>
       </ul>
     </div>
