--- a/Protoripo_practica/html/view4.html
+++ b/Protoripo_practica/html/view4.html
@@ -49,19 +49,19 @@
         <ul class="nav navbar-nav navbar-center">
 
           <li class="nav-item">
-            <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="index.html"
+            <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="/index.html"
               id="cabecera">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="Nosotros.html"
+            <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="/Protoripo_practica/html/Nosotros.html"
               id="cabecera">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="Productos.html"
+            <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="/Protoripo_practica/html/Productos.html"
               id="cabecera">Productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="Servicios.html"
+            <a class="nav-link active" style="color: #ffffff; font-weight: bold; font-size: 30px" href="/Protoripo_practica/html/Servicios.html"
               id="cabecera">Servicios</a>
           </li>
         </ul>
